--- a/button.html
+++ b/button.html
@@ -34,7 +34,7 @@
             <a href="/assets/academy.html">AGENCIA</a>
             <ul>
               <li>
-                <a href="./AcademyPages/recreative.html">Todas</a>
+                <a href="http./AcademyPages/recreative.html">Todas</a>
               </li>
               <li>
                 <a href="./AcademyPages/competitive.html">Internacional</a>
