--- a/index.html
+++ b/index.html
@@ -10,49 +10,49 @@
     <nav id="menuGral">
         <ul>
           <li>
-            <a href="index.html">POSICIONES</a>
+            <a href="#">POSICIONES</a>
             <ul>
               <li>
-                <a href="./assets/Home/Mision.html">Todos</a>
+                <a href="https://www.google.com/">Todos</a>
               </li>
               <li>
-                <a href="./assets/Home/valores.html">Portero</a>
+                <a href="#">Portero</a>
               </li>
               <li>
-                <a href="./assets/Home/history.html">Defensa</a>
+                <a href="#">Defensa</a>
               </li>
               <li>
-                <a href="./assets/Home/coaches.html">Centrocampista</a>
+                <a href="#">Centrocampista</a>
               </li>
               <li>
-                <a href="./assets/Home/Mision.html">Delantero</a>
+                <a href="#">Delantero</a>
               </li>
             </ul>
           </li>
   
           <li>
-            <a href="/assets/academy.html">AGENCIA</a>
+            <a href="#">AGENCIA</a>
             <ul>
               <li>
-                <a href="http./AcademyPages/recreative.html">Todas</a>
+                <a href="https://www.google.com/">Todas</a>
               </li>
               <li>
-                <a href="./AcademyPages/competitive.html">Internacional</a>
+                <a href="#">Internacional</a>
               </li>
               <li>
-                <a href="./AcademyPages/goalkeepers.html">España</a>
+                <a href="#">España</a>
               </li>
               <li>
-                <a href="./AcademyPages/highPerformance.html">Usa</a>
+                <a href="#">Usa</a>
               </li>
               <li>
-                <a href="./AcademyPages/highPerformance.html">Argentina</a>
+                <a href="#">Argentina</a>
               </li>
               <li>
-                <a href="./AcademyPages/highPerformance.html">Chile</a>
+                <a href="#">Chile</a>
               </li>
               <li>
-                <a href="./AcademyPages/highPerformance.html">Paraguay</a>
+                <a href="#">Paraguay</a>
               </li>
             
             
